Added Projectile Physics, Logic & gamemode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/Maps/Level01.Level01
 
 
 EditorStartupMap=/Game/Maps/Level01.Level01
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/BP_TankGameGamemode.BP_TankGameGamemode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
