--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,3 +44,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+CellHeight=10.000000
+
